Add dmsans font to footer

--- a/index.html
+++ b/index.html
@@ -226,10 +226,11 @@
           </div>
           <p class="text-tneutral-300 font-medium">63°</p>
         </div>
+      </div>
     </section>
   </main>
 
-  <footer class="attribution">
+  <footer class="attribution font-dm-sans">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>. 
     Coded by <a href="github.com/Tjay05">Your Name Here</a>.
   </footer>
