Edit search bar

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   </header>
 
   <main class="rule md:my-12">
-    <!-- Search section -->
+    <!-- Search input section -->
     <section class="my-4">
       <h1 class="text-center font-bricolage text-6xl/17 font-bold">How's the sky looking today?</h1>
       <div class="flex w-full md:w-1/2 md:mx-auto md:justify-between flex-col md:flex-row gap-3 mt-10 mb-4 relative">
