--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
   <header class="rule">
     <nav class="nav flex items-center justify-between py-3 relative">
       <img src="assets/images/logo.svg" alt="logo" class="w-1/3 md:w-[15%]">
-      <button id="nav-chevron" class="rounded-lg bg-tneutral-800 py-2 px-2.5 cursor-pointer flex items-center gap-1 font-dm-sans text-sm justify-between">
+      <button id="nav-chevron" class="rounded-lg bg-tneutral-800 py-2 px-2.5 cursor-pointer flex items-center gap-1 font-dm-sans text-sm justify-between focus:outline-2 outline-offset-2">
         <img src="assets/images/icon-units.svg" alt="units" class="">
         Units
         <img src="assets/images/icon-dropdown.svg" alt="dropdown">
       </button>
-      <ul class="hidden" id="nav-dropdown-menu">
-        <li class="text-base units">Switch to Imperial/Metric</li>
+      <ul class="menu" id="nav-dropdown-menu">
+        <button class="text-base cursor-pointer focus:outline-1 outline-offset-1 units">Switch to Imperial/Metric</button>
         <li class="text-tneutral-300 units">Temperature</li>
         <li class="units">Celsius (°C)</li>
         <li class="units">Fahrenheit (°F)</li>
@@ -52,13 +52,13 @@
       <h1 class="text-center font-bricolage text-6xl/17 font-bold">How's the sky looking today?</h1>
       <div class="flex w-full md:w-1/2 md:mx-auto md:justify-between flex-col md:flex-row gap-3 mt-10 mb-4 relative">
         <input
-          class="bg-tneutral-800 rounded-lg py-2 md:py-3 pl-10 font-dm-sans w-full text-tneutral-200"
+          class="bg-tneutral-800 rounded-lg py-2 md:py-3 pl-10 font-dm-sans w-full text-tneutral-200 hover:cursor-pointer focus:outline-2 outline-offset-2 outline-tneutral-0"
           type="search"
           placeholder="Search for a city, e.g., New York"
           id="search"
         >
         <img src="assets/images/icon-search.svg" alt="search" class="absolute top-3 left-4 w-[15px] md:top-4">
-        <button class="bg-tblue-500 rounded-lg py-2 px-4 font-dm-sans">Search</button>
+        <button class="bg-tblue-500 rounded-xl py-2 px-4 font-dm-sans hover:cursor-pointer focus:outline-2 outline-offset-2 outline-tblue-500">Search</button>
       </div>
     </section>
     <section class="my-8 md:h-[664px] md:grid grid-cols-6 grid-rows-5 md:gap-6">
@@ -158,11 +158,11 @@
       <div class="my-8 md:my-0 font-dm-sans flex flex-col gap-4 bg-tneutral-800 rounded-2xl px-4 py-6 col-span-2 row-start-1 col-start-5 row-span-5">
         <div class="flex items-center justify-between relative">
           <h2 class="text-xl font-medium">Hourly forecast</h2>
-          <button id="day-chevron" class="flex items-center gap-3 bg-tneutral-600 rounded-lg py-2 font-medium text-tneutral-200 px-4 cursor-pointer">
+          <button id="day-chevron" class="flex items-center gap-3 bg-tneutral-600 rounded-lg py-2 font-medium text-tneutral-200 px-4 cursor-pointer focus:outline-2 outline-offset-2">
             Tuesday
             <img src="assets/images/icon-dropdown.svg" alt="chevron" class="">
           </button>
-          <ul id="day-dropdown-menu" class="hidden">
+          <ul id="day-dropdown-menu" class="menu">
             <li class="units pr-16">Monday</li>
             <li class="units">Tuesday</li>
             <li class="units">Wednesday</li>
