--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </section>
     <section class="my-8 md:h-[664px] md:grid grid-cols-6 grid-rows-5 md:gap-6">
       <!-- Location details -->
-      <div class="cta col-span-4 row-span-2 md:flex md:items-center md:justify-between md:w-full md:p-4">
+      <!-- <div class="cta col-span-4 row-span-2 md:flex md:items-center md:justify-between md:w-full md:p-4">
         <div class="text-center md:text-left">
           <p class="text-2xl/10 md:text-3xl/12 font-bold">Berlin, Germany</p>
           <p class="text-tneutral-200 text-sm md:text-base">Tuesday, Aug 5, 2025</p>
@@ -72,84 +72,89 @@
           <img src="assets/images/icon-sunny.webp" alt="sun" class="w-[40%]">
           <p class="font-semibold font-bricolage text-7xl"><span class="italic">68 </span>°</p>
         </div>
+      </div> -->
+      
+      <div class="col-span-4 row-span-2 flex items-center justify-center w-full md:p-4 font-bricolage font-bold bg-tneutral-800 rounded-2xl p-8">
+        <p class="border-dotted border-12 border-transparent px-0 py-6 border-t-tneutral-200 text-tneutral-200 rounded-full">Loading...</p>
       </div>
+
       <!-- Today Forecasts -->
       <div class="grid grid-cols-2 md:grid-cols-4 row-span-1 gap-3 md:gap-4 my-8 md:my-0 font-dm-sans col-span-4">
         <div class="bg-tneutral-800 border-1 border-tneutral-600 p-4 flex flex-col rounded-2xl">
           <p class="text-tneutral-300 text-lg">Feels like</p>
-          <span class="text-tneutral-200 text-3xl mt-4">64°</span>
+          <span class="text-tneutral-200 text-3xl mt-4">-</span>
         </div>
         <div class="bg-tneutral-800 border-1 border-tneutral-600 p-4 flex flex-col rounded-2xl">
           <p class="text-tneutral-300 text-lg">Humidity</p>
-          <span class="text-tneutral-200 text-3xl mt-4">46%</span>
+          <span class="text-tneutral-200 text-3xl mt-4">-</span>
         </div>
         <div class="bg-tneutral-800 border-1 border-tneutral-600 p-4 flex flex-col rounded-2xl">
           <p class="text-tneutral-300 text-lg">Wind</p>
-          <span class="text-tneutral-200 text-3xl mt-4">9 mph</span>
+          <span class="text-tneutral-200 text-3xl mt-4">-</span>
         </div>
         <div class="bg-tneutral-800 border-1 border-tneutral-600 p-4 flex flex-col rounded-2xl">
           <p class="text-tneutral-300 text-lg">Precipitation</p>
-          <span class="text-tneutral-200 text-3xl mt-4">0 in</span>
+          <span class="text-tneutral-200 text-3xl mt-4">-</span>
         </div>
       </div>
       <!-- Daily Forecast -->
       <div class="my-8 md:mb-0 font-dm-sans col-span-4 row-span-2">
         <h2 class="text-xl">Daily forecast</h2>
         <div class="grid grid-cols-3 md:grid-cols-7 gap-y-4 gap-x-3 my-4">
-          <div class="flex flex-col items-center bg-tneutral-800 rounded-2xl p-4 border-1 border-tneutral-600">
-            <p class="text-lg">Tue</p>
-            <img src="assets/images/icon-rain.webp" alt="rain" class="">
+          <div class="flex flex-col items-center bg-tneutral-800 rounded-2xl p-4 border-1 border-tneutral-600 min-h-[168px]">
+            <p class="text-lg"></p>
+            <img src="" alt="" class="">
             <div class="flex justify-between items-center text-lg self-stretch mt-3">
-              <p class="text-tneutral-200">68°</p>
-              <p class="text-tneutral-300">57°</p>
+              <p class="text-tneutral-200"></p>
+              <p class="text-tneutral-300"></p>
             </div>
           </div>
-          <div class="flex flex-col items-center bg-tneutral-800 rounded-2xl p-4 border-1 border-tneutral-600">
-            <p class="text-lg">Wed</p>
-            <img src="assets/images/icon-drizzle.webp" alt="drizzle" class="">
+          <div class="flex flex-col items-center bg-tneutral-800 rounded-2xl p-4 border-1 border-tneutral-600 min-h-[168px]">
+            <p class="text-lg"></p>
+            <img src="" alt="" class="">
             <div class="flex justify-between items-center text-lg self-stretch mt-3">
-              <p class="text-tneutral-200">70°</p>
-              <p class="text-tneutral-300">59°</p>
+              <p class="text-tneutral-200"></p>
+              <p class="text-tneutral-300"></p>
             </div>
           </div>
-          <div class="flex flex-col items-center bg-tneutral-800 rounded-2xl p-4 border-1 border-tneutral-600">
-            <p class="text-lg">Thu</p>
-            <img src="assets/images/icon-sunny.webp" alt="sunny" class="">
+          <div class="flex flex-col items-center bg-tneutral-800 rounded-2xl p-4 border-1 border-tneutral-600 min-h-[168px]">
+            <p class="text-lg"></p>
+            <img src="" alt="" class="">
             <div class="flex justify-between items-center text-lg self-stretch mt-3">
-              <p class="text-tneutral-200">75°</p>
-              <p class="text-tneutral-300">57°</p>
+              <p class="text-tneutral-200"></p>
+              <p class="text-tneutral-300"></p>
             </div>
           </div>
-          <div class="flex flex-col items-center bg-tneutral-800 rounded-2xl p-4 border-1 border-tneutral-600">
-            <p class="text-lg">Fri</p>
-            <img src="assets/images/icon-partly-cloudy.webp" alt="partly-cloudy" class="">
+          <div class="flex flex-col items-center bg-tneutral-800 rounded-2xl p-4 border-1 border-tneutral-600 min-h-[168px]">
+            <p class="text-lg"></p>
+            <img src="" alt="" class="">
             <div class="flex justify-between items-center text-lg self-stretch mt-3">
-              <p class="text-tneutral-200">77°</p>
-              <p class="text-tneutral-300">55°</p>
+              <p class="text-tneutral-200"></p>
+              <p class="text-tneutral-300"></p>
             </div>
           </div>
-          <div class="flex flex-col items-center bg-tneutral-800 rounded-2xl p-4 border-1 border-tneutral-600">
-            <p class="text-lg">Sat</p>
-            <img src="assets/images/icon-storm.webp" alt="storm" class="">
+          <div class="flex flex-col items-center bg-tneutral-800 rounded-2xl p-4 border-1 border-tneutral-600 min-h-[168px]">
+            <p class="text-lg"></p>
+            <img src="" alt="" class="">
             <div class="flex justify-between items-center text-lg self-stretch mt-3">
-              <p class="text-tneutral-200">70°</p>
-              <p class="text-tneutral-300">59°</p>
+              <p class="text-tneutral-200"></p>
+              <p class="text-tneutral-300"></p>
             </div>
           </div>
-          <div class="flex flex-col items-center bg-tneutral-800 rounded-2xl p-4 border-1 border-tneutral-600">
-            <p class="text-lg">Sun</p>
-            <img src="assets/images/icon-snow.webp" alt="snow" class="">
+          <div class="flex flex-col items-center bg-tneutral-800 rounded-2xl p-4 border-1 border-tneutral-600 min-h-[168px]">
+            <p class="text-lg"></p>
+            <img src="" alt="" class="">
             <div class="flex justify-between items-center text-lg self-stretch mt-3">
-              <p class="text-tneutral-200">77°</p>
-              <p class="text-tneutral-300">61°</p>
+              <p class="text-tneutral-200"></p>
+              <p class="text-tneutral-300"></p>
             </div>
           </div>
-          <div class="flex flex-col items-center bg-tneutral-800 rounded-2xl p-4 border-1 border-tneutral-600">
-            <p class="text-lg">Mon</p>
-            <img src="assets/images/icon-fog.webp" alt="fog" class="">
+          <div class="flex flex-col items-center bg-tneutral-800 rounded-2xl p-4 border-1 border-tneutral-600 min-h-[168px]">
+            <p class="text-lg"></p>
+            <img src="" alt="" class="">
             <div class="flex justify-between items-center text-lg self-stretch mt-3">
-              <p class="text-tneutral-200">75°</p>
-              <p class="text-tneutral-300">59°</p>
+              <p class="text-tneutral-200"></p>
+              <p class="text-tneutral-300"></p>
             </div>
           </div>
         </div>
@@ -159,7 +164,7 @@
         <div class="flex items-center justify-between relative">
           <h2 class="text-xl font-medium">Hourly forecast</h2>
           <button id="day-chevron" class="flex items-center gap-3 bg-tneutral-600 rounded-lg py-2 font-medium text-tneutral-200 px-4 cursor-pointer focus:outline-2 outline-offset-2">
-            Tuesday
+            --
             <img src="assets/images/icon-dropdown.svg" alt="chevron" class="">
           </button>
           <ul id="day-dropdown-menu" class="menu">
@@ -172,68 +177,68 @@
             <li class="units">Sunday</li>
           </ul>
         </div>
-        <div class="flex items-center justify-between rounded-lg bg-tneutral-700 px-3 py-2 border-1 border-tneutral-600">
+        <div class="flex items-center justify-between rounded-lg bg-tneutral-700 px-3 py-2 border-1 border-tneutral-600 min-h-[56px]">
           <div class="flex items-center gap-2">
-            <img src="assets/images/icon-overcast.webp" alt="overcast" class="w-[13%]">
-            <p class="text-lg">3 PM</p>
+            <img src="" alt="" class="w-[13%]">
+            <p class="text-lg"></p>
           </div>
-          <p class="text-tneutral-300 font-medium">68°</p>
+          <p class="text-tneutral-300 font-medium"></p>
         </div>
-        <div class="flex items-center justify-between rounded-lg bg-tneutral-700 px-3 py-2 border-1 border-tneutral-600">
+        <div class="flex items-center justify-between rounded-lg bg-tneutral-700 px-3 py-2 border-1 border-tneutral-600 min-h-[56px]">
           <div class="flex items-center gap-2">
-            <img src="assets/images/icon-partly-cloudy.webp" alt="overcast" class="w-[13%]">
-            <p class="text-lg">4 PM</p>
+            <img src="" alt="" class="w-[13%]">
+            <p class="text-lg"></p>
           </div>
-          <p class="text-tneutral-300 font-medium">68°</p>
+          <p class="text-tneutral-300 font-medium"></p>
         </div>
-        <div class="flex items-center justify-between rounded-lg bg-tneutral-700 px-3 py-2 border-1 border-tneutral-600">
+        <div class="flex items-center justify-between rounded-lg bg-tneutral-700 px-3 py-2 border-1 border-tneutral-600 min-h-[56px]">
           <div class="flex items-center gap-2">
-            <img src="assets/images/icon-sunny.webp" alt="sunny" class="w-[13%]">
-            <p class="text-lg">5 PM</p>
+            <img src="" alt="" class="w-[13%]">
+            <p class="text-lg"></p>
           </div>
-          <p class="text-tneutral-300 font-medium">68°</p>
+          <p class="text-tneutral-300 font-medium"></p>
         </div>
-        <div class="flex items-center justify-between rounded-lg bg-tneutral-700 px-3 py-2 border-1 border-tneutral-600">
+        <div class="flex items-center justify-between rounded-lg bg-tneutral-700 px-3 py-2 border-1 border-tneutral-600 min-h-[56px]">
           <div class="flex items-center gap-2">
-            <img src="assets/images/icon-overcast.webp" alt="overcast" class="w-[13%]">
-            <p class="text-lg">6 PM</p>
+            <img src="" alt="" class="w-[13%]">
+            <p class="text-lg"></p>
           </div>
-          <p class="text-tneutral-300 font-medium">66°</p>
+          <p class="text-tneutral-300 font-medium"></p>
         </div>
-        <div class="flex items-center justify-between rounded-lg bg-tneutral-700 px-3 py-2 border-1 border-tneutral-600">
+        <div class="flex items-center justify-between rounded-lg bg-tneutral-700 px-3 py-2 border-1 border-tneutral-600 min-h-[56px]">
           <div class="flex items-center gap-2">
-            <img src="assets/images/icon-snow.webp" alt="snow" class="w-[13%]">
-            <p class="text-lg">7 PM</p>
+            <img src="" alt="" class="w-[13%]">
+            <p class="text-lg"></p>
           </div>
-          <p class="text-tneutral-300 font-medium">66°</p>
+          <p class="text-tneutral-300 font-medium"></p>
         </div>
-        <div class="flex items-center justify-between rounded-lg bg-tneutral-700 px-3 py-2 border-1 border-tneutral-600">
+        <div class="flex items-center justify-between rounded-lg bg-tneutral-700 px-3 py-2 border-1 border-tneutral-600 min-h-[56px]">
           <div class="flex items-center gap-2">
-            <img src="assets/images/icon-fog.webp" alt="foggy" class="w-[13%]">
-            <p class="text-lg">8 PM</p>
+            <img src="" alt="" class="w-[13%]">
+            <p class="text-lg"></p>
           </div>
-          <p class="text-tneutral-300 font-medium">64°</p>
+          <p class="text-tneutral-300 font-medium"></p>
         </div>
-        <div class="flex items-center justify-between rounded-lg bg-tneutral-700 px-3 py-2 border-1 border-tneutral-600">
+        <div class="flex items-center justify-between rounded-lg bg-tneutral-700 px-3 py-2 border-1 border-tneutral-600 min-h-[56px]">
           <div class="flex items-center gap-2">
-            <img src="assets/images/icon-snow.webp" alt="overcast" class="w-[13%]">
-            <p class="text-lg">9 PM</p>
+            <img src="" alt="" class="w-[13%]">
+            <p class="text-lg"></p>
           </div>
-          <p class="text-tneutral-300 font-medium">63°</p>
+          <p class="text-tneutral-300 font-medium"></p>
         </div>
-        <div class="flex items-center justify-between rounded-lg bg-tneutral-700 px-3 py-2 border-1 border-tneutral-600">
+        <div class="flex items-center justify-between rounded-lg bg-tneutral-700 px-3 py-2 border-1 border-tneutral-600 min-h-[56px]">
           <div class="flex items-center gap-2">
-            <img src="assets/images/icon-overcast.webp" alt="overcast" class="w-[13%]">
-            <p class="text-lg">10 PM</p>
+            <img src="" alt="" class="w-[13%]">
+            <p class="text-lg"></p>
           </div>
-          <p class="text-tneutral-300 font-medium">63°</p>
+          <p class="text-tneutral-300 font-medium"></p>
         </div>
       </div>
     </section>
   </main>
 
   <footer class="attribution font-dm-sans">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>. 
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor°</a>. 
     Coded by <a href="github.com/Tjay05">Your Name Here</a>.
   </footer>
 
