Add all dropdown logic

--- a/index.html
+++ b/index.html
@@ -57,6 +57,11 @@
           placeholder="Search for a city, e.g., New York"
           id="search"
         >
+        <ul id="search-dropdown-menu" class="search-menu">
+          <li class="p-1 rounded-lg px-2">City Name</li>
+          <li class="p-1 rounded-lg px-2">City Name</li>
+          <li class="p-1 rounded-lg px-2">City Name</li>
+        </ul>
         <img src="assets/images/icon-search.svg" alt="search" class="absolute top-3 left-4 w-[15px] md:top-4">
         <button class="bg-tblue-500 rounded-xl py-2 px-4 font-dm-sans hover:cursor-pointer focus:outline-2 outline-offset-2 outline-tblue-500">Search</button>
       </div>
@@ -74,6 +79,7 @@
         </div>
       </div> -->
       
+      <!-- Loading Container -->
       <div class="col-span-4 row-span-2 flex items-center justify-center w-full md:p-4 font-bricolage font-bold bg-tneutral-800 rounded-2xl p-8">
         <p class="border-dotted border-12 border-transparent px-0 py-6 border-t-tneutral-200 text-tneutral-200 rounded-full">Loading...</p>
       </div>
