Add spin loader

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       
       <!-- Loading Container -->
       <div class="col-span-4 row-span-2 flex items-center justify-center w-full md:p-4 font-bricolage font-bold bg-tneutral-800 rounded-2xl p-8">
-        <p class="border-dotted border-12 border-transparent px-0 py-6 border-t-tneutral-200 text-tneutral-200 rounded-full">Loading...</p>
+        <p class="loader">Loading...</p>
       </div>
 
       <!-- Today Forecasts -->
