--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <header class="rule">
     <nav class="nav flex items-center justify-between py-3 relative">
       <img src="assets/images/logo.svg" alt="logo" class="w-1/3 md:w-[15%]">
-      <button id="nav-chevron" class="rounded-lg bg-tneutral-800 py-2 px-2.5 cursor-pointer flex items-center gap-1 font-dm-sans text-sm justify-between focus:outline-2 outline-offset-2">
+      <button id="nav-chevron" class="rounded-lg bg-tneutral-800 py-2 px-2.5 cursor-pointer flex items-center gap-1 font-dm-sans text-sm justify-between">
         <img src="assets/images/icon-units.svg" alt="units" class="">
         Units
         <img src="assets/images/icon-dropdown.svg" alt="dropdown">
@@ -75,7 +75,7 @@
         </div>
         <div class="flex items-center justify-between md:w-[35%]">
           <img src="assets/images/icon-sunny.webp" alt="sun" class="w-[40%]">
-          <p class="font-semibold font-bricolage text-7xl"><span class="italic">68 </span>°</p>
+          <p class="font-semibold font-bricolage text-7xl"><span id="current-temp" class="italic">68 </span>°</p>
         </div>
       </div>
       
@@ -88,7 +88,7 @@
       <div class="grid grid-cols-2 md:grid-cols-4 row-span-1 gap-3 md:gap-4 my-8 md:my-0 font-dm-sans col-span-4">
         <div class="bg-tneutral-800 border-1 border-tneutral-600 p-4 flex flex-col rounded-2xl">
           <p class="text-tneutral-300 text-lg">Feels like</p>
-          <span id="current-temp" class="text-tneutral-200 text-3xl mt-4">-</span>
+          <span id="current-feel" class="text-tneutral-200 text-3xl mt-4">-</span>
         </div>
         <div class="bg-tneutral-800 border-1 border-tneutral-600 p-4 flex flex-col rounded-2xl">
           <p class="text-tneutral-300 text-lg">Humidity</p>
@@ -106,63 +106,15 @@
       <!-- Daily Forecast -->
       <div class="my-8 md:mb-0 font-dm-sans col-span-4 row-span-2">
         <h2 class="text-xl">Daily forecast</h2>
-        <div class="grid grid-cols-3 md:grid-cols-7 gap-y-4 gap-x-3 my-4">
-          <div class="flex flex-col items-center bg-tneutral-800 rounded-2xl p-4 border-1 border-tneutral-600 min-h-[168px]">
+        <div id="daily-forecast" class="grid grid-cols-3 md:grid-cols-7 gap-y-4 gap-x-3 my-4">
+          <!-- <div class="flex flex-col items-center bg-tneutral-800 rounded-2xl p-4 border-1 border-tneutral-600 min-h-[168px]">
             <p class="text-lg"></p>
-            <img src="" alt="" class="">
+            <img src="" alt="" class="daily-icon">
             <div class="flex justify-between items-center text-lg self-stretch mt-3">
               <p class="text-tneutral-200"></p>
               <p class="text-tneutral-300"></p>
             </div>
-          </div>
-          <div class="flex flex-col items-center bg-tneutral-800 rounded-2xl p-4 border-1 border-tneutral-600 min-h-[168px]">
-            <p class="text-lg"></p>
-            <img src="" alt="" class="">
-            <div class="flex justify-between items-center text-lg self-stretch mt-3">
-              <p class="text-tneutral-200"></p>
-              <p class="text-tneutral-300"></p>
-            </div>
-          </div>
-          <div class="flex flex-col items-center bg-tneutral-800 rounded-2xl p-4 border-1 border-tneutral-600 min-h-[168px]">
-            <p class="text-lg"></p>
-            <img src="" alt="" class="">
-            <div class="flex justify-between items-center text-lg self-stretch mt-3">
-              <p class="text-tneutral-200"></p>
-              <p class="text-tneutral-300"></p>
-            </div>
-          </div>
-          <div class="flex flex-col items-center bg-tneutral-800 rounded-2xl p-4 border-1 border-tneutral-600 min-h-[168px]">
-            <p class="text-lg"></p>
-            <img src="" alt="" class="">
-            <div class="flex justify-between items-center text-lg self-stretch mt-3">
-              <p class="text-tneutral-200"></p>
-              <p class="text-tneutral-300"></p>
-            </div>
-          </div>
-          <div class="flex flex-col items-center bg-tneutral-800 rounded-2xl p-4 border-1 border-tneutral-600 min-h-[168px]">
-            <p class="text-lg"></p>
-            <img src="" alt="" class="">
-            <div class="flex justify-between items-center text-lg self-stretch mt-3">
-              <p class="text-tneutral-200"></p>
-              <p class="text-tneutral-300"></p>
-            </div>
-          </div>
-          <div class="flex flex-col items-center bg-tneutral-800 rounded-2xl p-4 border-1 border-tneutral-600 min-h-[168px]">
-            <p class="text-lg"></p>
-            <img src="" alt="" class="">
-            <div class="flex justify-between items-center text-lg self-stretch mt-3">
-              <p class="text-tneutral-200"></p>
-              <p class="text-tneutral-300"></p>
-            </div>
-          </div>
-          <div class="flex flex-col items-center bg-tneutral-800 rounded-2xl p-4 border-1 border-tneutral-600 min-h-[168px]">
-            <p class="text-lg"></p>
-            <img src="" alt="" class="">
-            <div class="flex justify-between items-center text-lg self-stretch mt-3">
-              <p class="text-tneutral-200"></p>
-              <p class="text-tneutral-300"></p>
-            </div>
-          </div>
+          </div> -->
         </div>
       </div>
       <!-- Hourly Forecast -->
