Add hourly forecast id

--- a/index.html
+++ b/index.html
@@ -119,32 +119,27 @@
       </div>
       <!-- Hourly Forecast -->
       <div class="my-8 md:my-0 font-dm-sans flex flex-col gap-4 bg-tneutral-800 rounded-2xl px-4 py-6 col-span-2 row-start-1 col-start-5 row-span-5">
-        <div class="flex items-center justify-between relative">
+        <div class="flex items-center justify-between">
           <h2 class="text-xl font-medium">Hourly forecast</h2>
           <select id="day-selector" class="bg-tneutral-600 rounded-lg py-2 font-medium text-tneutral-200 pl-2 cursor-pointer">
             <option value="null">--</option>
-            <option value="mon">Monday</option>
-            <option value="tue">Tuesday</option>
-            <option value="wed">Wednesday</option>
-            <option value="thurs">Thursday</option>
-            <option value="fri">Friday</option>
-            <option value="sat">Saturday</option>
-            <option value="sun">Sunday</option>
           </select>
         </div>
-        <div class="flex items-center justify-between rounded-lg bg-tneutral-700 px-3 py-2 border-1 border-tneutral-600 min-h-[56px]">
-          <div class="flex items-center gap-2">
-            <img src="" alt="" class="w-[13%]">
-            <p class="text-lg"></p>
-          </div>
-          <p class="text-tneutral-300 font-medium"></p>
+        <div id="hourly-forecast" class="flex flex-col gap-4">
+          <!-- <div class="flex items-center justify-between rounded-lg bg-tneutral-700 px-3 py-2 border-1 border-tneutral-600 min-h-[56px]">
+            <div class="flex items-center gap-2">
+              <img src="" alt="" class="w-[13%]">
+              <p class="text-lg"></p>
+            </div>
+            <p class="text-tneutral-300 font-medium"></p>
+          </div> -->
         </div>
       </div>
     </section>
   </main>
 
   <footer class="attribution font-dm-sans">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor°</a>. 
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>. 
     Coded by <a href="github.com/Tjay05">Your Name Here</a>.
   </footer>
 
