--- a/index.html
+++ b/index.html
@@ -54,16 +54,13 @@
         <input
           class="bg-tneutral-800 rounded-lg py-2 md:py-3 pl-10 font-dm-sans w-full text-tneutral-200 hover:cursor-pointer focus:outline-2 outline-offset-2 outline-tneutral-0"
           type="search"
-          placeholder="Search for a city, e.g., New York"
-          id="search"
+          autocomplete="off"
+          placeholder="Search for a city, e.g., Abuja"
+          id="search-input"
         >
-        <ul id="search-dropdown-menu" class="search-menu">
-          <li class="p-1 rounded-lg px-2">City Name</li>
-          <li class="p-1 rounded-lg px-2">City Name</li>
-          <li class="p-1 rounded-lg px-2">City Name</li>
-        </ul>
+        <ul id="search-dropdown-menu" class="search-menu"></ul>
         <img src="assets/images/icon-search.svg" alt="search" class="absolute top-3 left-4 w-[15px] md:top-4">
-        <button class="bg-tblue-500 rounded-xl py-2 px-4 font-dm-sans hover:cursor-pointer focus:outline-2 outline-offset-2 outline-tblue-500">Search</button>
+        <button id="search-button" class="bg-tblue-500 rounded-xl py-2 px-4 font-dm-sans hover:cursor-pointer focus:outline-2 outline-offset-2 outline-tblue-500">Search</button>
       </div>
     </section>
     <section class="my-8 md:h-[664px] md:grid grid-cols-6 grid-rows-5 md:gap-6">
