Add weather icon id

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <p id="time" class="text-tneutral-200 text-sm md:text-base">Tuesday, Aug 5, 2025</p>
         </div>
         <div class="flex items-center justify-between md:w-[35%]">
-          <img src="assets/images/icon-sunny.webp" alt="sun" class="w-[40%]">
+          <img id="location-icon" src="assets/images/icon-sunny.webp" alt="sun" class="w-[40%]">
           <p class="font-semibold font-bricolage text-7xl"><span id="current-temp" class="italic">68 </span>°</p>
         </div>
       </div>
